# UCLA_CMG

./: Readme.txt
TensorInterpolation/: demo_teninterp.m  dyads_interp.m  mesh_nodes.mat  sizes.m  sym32ten.m  ten2spd.m  ten2sym3.m  tenInterpTeem.c  tenInterpTeem.mexmaci64  ten_det.m  ten_dev.m  ten_inv2lam.m  ten_mode.m  ten_norm.m  ten_ortho_invariants.m  ten_trace.m  teneig.m  teninterp.m
voomEP/: Readme.txt  acinclude.m4  configure.in
voomEP/src/: Makefile.am  voom.h
voomEP/src/Applications/CardiacEP/: ComputeECG.cc  ComputeECG.h  ECG.input  EPSimulator.cc  EPSimulator_Failing.cc  Makefile.am  Normal.input  VF.input  VF_Failing.input  configure.ac
voomEP/src/Applications/CardiacEP/Mesh/NormalHeart/: readme.txt
voomEP/src/Body/: CardiacBody.cc  CardiacBody.h  Makefile.am
voomEP/src/IonicModel/: IonicModel.h  LR.cc  LR.h  LRGateTable.h  Mahajan.cc  Mahajan.h  Mahajan_fail.cc  Mahajan_fail.h  Makefile.am  Purkinje.cc  Purkinje.h  SetUpIonicConstants.h  Tusscher.cc  Tusscher.h
voomEP/src/Material/: CompMyoCardium.cc  CompMyoCardium.h  CompNeoHookean.cc  CompNeoHookean.h  Makefile.am  Material.cc  Material.h  NeoHookean.cc  NeoHookean.h
voomEP/src/Mesh/: HexMesh.cc  HexMesh.h  Makefile.am  Mesh.cc  Mesh.h  MixedMesh3D.cc  MixedMesh3D.h  QuadMesh.cc  QuadMesh.h  TetMesh.cc  TetMesh.h  Tri3Mesh.cc  Tri3Mesh.h
voomEP/src/Quadrature/: HexQuadrature.cc  HexQuadrature.h  LineQuadrature.cc  LineQuadrature.h  Makefile.am  QuadQuadrature.cc  QuadQuadrature.h  Quadrature.h  TetQuadrature.cc  TetQuadrature.h  TriangleQuadrature.cc  TriangleQuadrature.h
voomEP/src/Shape/: Hermite.cc  Hermite.h  LoopShellShape.cc  LoopShellShape.h  Makefile.am  Shape.h  Shape.icc  ShapeBar.cc  ShapeBar.h  ShapeHex8.cc  ShapeHex8.h  ShapeQ4.cc  ShapeQ4.h  ShapeTet10.cc  ShapeTet10.h  ShapeTet4CP.cc  ShapeTet4CP.h  ShapeTri3.cc  ShapeTri3.h  ShapeTri6.cc  ShapeTri6.h
voomEP/src/Solvers/: EPSolver.cc  EPSolver.h  EP_BackwardEuler.cc  EP_BackwardEuler.h  EP_CrankNicholson.cc  EP_CrankNicholson.h  EP_ExplicitSolver.cc  EP_ExplicitSolver.h  Makefile.am
voomEP/src/VoomMath/: Makefile.am  VoomMath.cc  VoomMath.h
