## Makefile.am -- Process this file with automake to produce Makefile.in
AM_CPPFLAGS = -I$(srcdir)/../VoomMath -I$(srcdir)/.. -I$(blitz_includes) \
	      -I$(tvmet_includes) -I$(srcdir)/../Node
lib_LIBRARIES =libIonicModel.a
libIonicModel_a_SOURCES = LR.cc Purkinje.cc Tusscher.cc Mahajan.cc Mahajan_fail.cc

